syntax = "proto3";

package military_device;

option go_package = "./go";

import "google/protobuf/timestamp.proto";


message Message {
    string session_id = 1;
    double frequency = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message ConnectionParams {
    double mean = 1;
    double std_deviation = 2;
}

service MilitaryDevice {
    rpc Connect(ConnectionParams) returns (stream Message);
}